--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card-form-wrapper {
+  width: 50%;
+  text-align: center;
+  left: 25%;
+  right: 20%;
+  bottom: 20%;
+}
+
+.form-inside-card {
+
+}
